@@ -5,6 +5,7 @@ module ActiveScaffold::DataStructures
     def initialize
       @set = []
       @name = :root
+      @weight = 0
     end
 
     # adds an ActionLink, creating one from the arguments if need be
@@ -92,7 +93,7 @@ module ActiveScaffold::DataStructures
     # iterates over the links, possibly by type
     def each(options = {}, &block)
       method = options[:reverse] ? :reverse_each : :each
-      @set.send(method) do |item|
+      @set.sort_by(&:weight).send(method) do |item|
         if item.is_a?(ActiveScaffold::DataStructures::ActionLinks) && !options[:groups]
           item.each(options, &block)
         else
@@ -151,6 +152,7 @@ module ActiveScaffold::DataStructures
     end
 
     attr_accessor :name
+    attr_accessor :weight
 
     protected
 
